--- a/src/index.css
+++ b/src/index.css
@@ -53,10 +53,9 @@ body,
 
 .ResizableNode {
   height: 50px;
-  border: 1px solid #eee;
-  padding: 5px;
+  border: 1px solid #000000;
   border-radius: 5px;
-  background: white;
+  text-align: center;
 }
 
 .react-flow__node {
