--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,6 @@ body,
   height: 40px;
   line-height: 20px;
   list-style: none;
-  margin: 0;
   outline: none;
   padding: 10px 16px;
   position: relative;
@@ -51,15 +50,18 @@ body,
   background-color: #F082AC;
 }
 
-.ResizableNode {
-  height: 50px;
-  border: 1px solid #000000;
-  border-radius: 15px;
-  text-align: center;
-}
 
 .react-flow__node {
   z-index: -1 !important;
+  border: '1px solid green'!important;
   border-radius: 15px !important;
   width: 100px;
 }
+
+.react-flow__node-resizableNode {
+  z-index: -1 !important;
+  border: '1px solid black'!important;
+  border-radius: 15px !important;
+  width: 100px;
+}
+
