--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ body,
   border: none;
   color: #53475e;
   padding: 8px 12px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
   margin: 2px 2px;
   border-radius: 4px;
@@ -80,18 +80,26 @@ body,
   position: relative;
 }
 
+.button-1:hover + .tooltip{
+  opacity: 1;
+}
 
 .tooltip {
   position: absolute;
+  top: calc(100% + 5px);
   bottom: calc(var(--tooltip-vertical-spacing) );
   transform-origin: bottom center;
   /*   Set a minimum height for your tooltip, which affects text wrapping */
   min-width: 120px;
+  max-width: 150px;
   /*   Adding some nice padding */
   padding: 1rem;
   border-radius: 0.4rem;
   background: #53475e;
   color: white;
+  opacity: 0;
+  transition: opacity 0.2s ease;
+  transition-delay: 0.5s;
 }
 
 .tooltip::after {
@@ -100,7 +108,7 @@ body,
   height: 0;
   width: 0;
   bottom: 99%; /* Move tooltip triangle vertical up*/
-  left: 50%;
+  left: 25%;
   border-style: solid;
   border-width: 0 var(--tooltip-triangle-size) var(--tooltip-triangle-size) var(--tooltip-triangle-size);
   border-color: #53475e transparent ;
@@ -110,4 +118,89 @@ body,
   /*   Additional browser compatibility for 'transform': */
   -moz-transform: translateX(var(--translateX));
   -webkit-transform: translateX(var(--translateX));
+}
+
+.open {
+  left: 0px;
+}
+.save {
+  left: 100px;
+}
+.restore {
+  left: 200px;
+}
+.export {
+  left: 320px;
+}
+
+
+.button-2-container {
+  display: flex;
+  width:auto;
+  bottom:120px;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  background-color: whitesmoke;
+  padding: 2px;
+  box-shadow: 0px 2px 10px rgba(5, 0, 56, 0.08);
+  border-radius: 4px;
+  position: relative;
+}
+
+.button-2 {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: none;
+  color: #53475e;
+  padding: 8px 8px;
+  font-size: 20px;
+  cursor: pointer;
+  margin: 2px 2px;
+  border-radius: 4px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+}
+
+.button-2:hover, .button-2:focus {
+  background-color: #ba8de0;
+}
+
+
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px;
+  min-width: 120px;
+  max-width: 140px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.dropdown {
+  position: relative;
+  display: block;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content button {
+  min-width: 120px;
+  max-width: 120px;
+  color: black;
+  padding: 12px 25px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content button:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
