--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ body,
   color: white;
 }
 
+.react-flow__node.selected{
+  z-index: 10 !important;
+}
+
 .react-flow__node {
   z-index: -1 !important;
   border: '1px solid green'!important;
