--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,20 @@ body,
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  margin-right: 0rem;
+  transition: transform 2s;
+}
+
+.updatenode__controls-collapse {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 4;
+  font-size: 12px;
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transform: translateX(30rem);
 }
 
 .updatenode__controls label {
@@ -65,19 +78,42 @@ body,
 }
 
 .hide-controls{
-  display:flex;
   position: absolute;
-  right: 300px; /* 275 20 */
-  top: 60px;
-  width: 30px;       
+  display:flex;
+  top: 12px;
+  right: 280px;
+  width: 25px;       
   height: 50px;      
   background-color: whitesmoke; 
-  border-radius: 5px; 
+  border-radius: 2px; 
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   align-items: center;
   justify-content: left;
+  z-index: 10;
+  margin-right: 0;
+  transition: margin-right 1.6s ;
+  transition-delay: 0.41s;
+}
+.hide-controls-collapse{
+  position: absolute;
+  display:flex;
+  top: 12px;
+  right: 280px;
+  width: 25px;       
+  height: 50px;      
+  background-color: whitesmoke; 
+  border-radius: 2px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  justify-content: left;
+  z-index: 10;
+  margin-right: -17.5rem;
+  transition: margin-right 0.5s;
 }
 .bx-chevron-right {
+  font-size: 20px;
+}
+.bx-chevron-left {
   font-size: 20px;
 }
 
@@ -161,10 +197,11 @@ body,
 
 
 .button-2-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   width:auto;
-  bottom:1000px;
+  bottom: 400px;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
@@ -172,7 +209,6 @@ body,
   padding: 2px;
   box-shadow: 0px 2px 10px rgba(5, 0, 56, 0.08);
   border-radius: 4px;
-  position: relative;
 }
 
 .button-2 {
