--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,3 +1,7 @@
+#root{
+  margin-top:0px;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -10,8 +14,9 @@ body {
   }
   
   .video-sec {
+    position: relative;
     width: 85%;
-    margin: 3em auto;
+    margin: 4em auto;
     text-align: left;
   }
   
@@ -24,6 +29,12 @@ body {
   
   .thumb-wrap {
     cursor: pointer;
+    width: 400px;
+    height: 300px;
+    background-color: #272727;
+    justify-content: right;
+    display: flex;
+    border-radius: 5px;
   }
   
   .thumb {
@@ -31,6 +42,7 @@ body {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     opacity: 1;
     transition: all .2s ease-in-out;
+    border-radius: 5px;
   }
   
   .thumb:hover {
@@ -40,8 +52,11 @@ body {
   
   .thumb-title {
     color: #f5f5f5;
-    margin: 0;
-    font-size: 1.2em;
+    margin-top: 5px;
+    margin-left: 5px;
+    text-align: left;
+    align-items: center;
+    font-size: 1.5em;
   }
   
   @media only screen and (max-width: 1456px) {
@@ -66,4 +81,102 @@ body {
     .video-sec-middle {
       grid-template-columns: repeat(1, 1fr);
     }
+  }
+
+  .font-bold{
+    color: black;
+    font-style: oblique;
+  }
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ffffffcc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+    align-items: start;
+  }
+  
+  .flex {
+    display: flex;
+  }
+  
+
+  .hover\:underline {
+    text-decoration: none;
+  }
+  
+  .hover\:underline:hover {
+    text-decoration: underline;
+  }
+  
+
+  .addflow{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: rgb(27, 27, 27);
+    justify-content: center;
+    align-items: center;
+    font-size: 500%;
+    color: whitesmoke;
+  }
+
+  a {
+    text-decoration: none;
+  }
+  
+  .bx-dots-vertical-rounded{
+    position: absolute;
+    font-size: 30px;
+    padding: 5px;
+    z-index: 10;
+  }
+
+  .bx-dots-vertical-rounded:hover{
+    position: absolute;
+    font-size: 35px;
+    padding: 4px;
+    z-index: 10;
+  }
+
+  
+
+  .dropdown-content-h {
+    display: none;
+    position: absolute;
+    min-width: 120px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content-h button {
+    min-width: 120px;
+    max-width: 120px;
+    color: black;
+    padding: 12px 25px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content-h button:hover{
+    background-color: rgba(242, 7, 70, 0.88);
+  }
+  .bx-x{
+    font-size: 16px;
+  }
+
+  .dropdown-h:hover .dropdown-content-h {
+    display: block;
+    
+  }
+
+  .dropdown-h {
+    background-color: rgba(207, 28, 156, 0.622);
+    border-radius: 5px;
   }
